--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,16 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FavoritePlayer"
         tools:targetApi="31">
-        <service
-            android:name=".AudioPlayerService"
-            android:enabled="true"
-            android:exported="true"></service>
 
-        <service android:name="MusicService"/>
+        <service android:name=".MyService"/>
 
-        <service
-            android:exported="false"
-            android:name=".BackgroundService"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
